removed typos in the about section

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -90,22 +90,27 @@
             <!-- Information -->
             <div class="col-sm-12 col-md-9 col-lg-9 mt40-xs mt40-sm">
                 <h3 class="mb20">Hello World - I’m Natascha!</h3>
-                <p class="mb20">Since I was a small child I loved painting and maths. Over the time this changed into a
-                    fascination for the fast pacing technology which is drastically changing our society - and art with
-                    it’s very reflective nature. <br>
+                <p class="mb20">
+                    Since I was a small child I loved painting and math. Over the time this changed
+                    into a fascination for the fast pacing technology which is drastically
+                    changing our society — and art with it’s very reflective nature.<br>
 
-                    I have studied <b>"Art and Multimedia"</b>, an interdisciplinary study on media art and IT,
-                    afterwards I choose to take a deeper look into<b> IT studies</b>. <br>Since that time I worked in
-                    different fields where I have strengthen my skills and expertise.
-                    I worked as a <b>Video Editor, Graphic Designer with focus on UI, freelance Media-Artist and
-                        Software Developer</b>. Never being afraid to use different tools from different domains and
-                    follow unexpected ways to realize the best outcome for the projects, I always remained curious to
-                    learn more.</p>
-                <p class="mb20">Whenever possible I take time for travel. Whenever I travel I take my camera with me.
-                    It’s the interaction with people from different cultures, and the understanding that we are all
-                    unique - but same in our essence, that thrives my wish to explore further and to capture the
-                    never-ending beauty that surrounds as all (... not to forget a small tiny little need for adventure
-                    once in a while ;).</p>
+                     I have studied <b>"Art and Multimedia"</b>, an interdisciplinary program on
+                    media art and IT, afterwards I decided to take a deeper look into <b> IT studies</b>.  
+                    <br>
+                    Since that time I worked in different fields where I have strengthened my
+                    skills and expertise. I worked as a <b>Video Editor, Graphic Designer with focus on UI, freelance Media-Artist and
+                    Software Developer</b>. Never being afraid to use different tools from different
+                    domains and following unexpected ways to realize the best outcome for my projects, I always remained
+                    curious to learn more.
+                    </p>
+
+                <p class="mb20"> Whenever possible I take time to travel.
+                    Whenever I travel I take my camera with me.
+                    It is the interaction with people from different cultures,
+                    and the understanding that we are all unique — but the same in our essence,
+                    that thrives my wish to explore further and to capture the never-ending beauty that
+                    surrounds us all (...and last but not least a tiny need for adventure once in a while;).</p>
 
                 <div class="row">
                     <div class="col-sm-6 col-md-6 col-lg-6">
