fixed broken links

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -64,7 +64,7 @@
                     <li><a href="#mixed-media" data-id="mixed-media" class="scroll-link">Multimedia</a></li>
                     <li><a href="#photography" data-id="photography" class="scroll-link">Photography</a></li>
                     <li><a href="#cv" data-id="cv" class="scroll-link">CV</a></li>
-                    <li><a href="#map" data-id="map" class="scroll-link">Contact</a></li>
+                    <li><a href="#contact" data-id="contact" class="scroll-link">Contact</a></li>
                 </ul>
             </div><!-- /.navbar-collapse -->
         </div><!-- /.container -->
@@ -145,10 +145,7 @@
         </div><!-- /.Information -->
     </div><!-- /.column -->
 
-    </div><!-- /.row -->
 
-
-    </div><!-- /.container -->
 </section>
 <!-- End About -->
 
@@ -178,6 +175,12 @@
                  data-classes="painting" data-heading="Demoglied" data-description="Dictatorship"/>
             <img class="template-item" src="images/preview/multimedia/2.jpeg" data-template="galleryItem"
                  data-classes="digital" data-heading="Demoglied" data-description="Democracy"/>
+
+            <img class="template-item" src="images/preview/multimedia/18.png" data-template="galleryItem"
+                 data-classes="digital" data-heading="UI Daft" data-description="for Confluence Theme"/>
+            <img class="template-item" src="images/preview/multimedia/19.png" data-template="galleryItem"
+                 data-classes="digital" data-heading="UI Draft" data-description="for Confluence Theme"/>
+
             <img class="template-item" src="images/preview/multimedia/3.jpeg" data-template="galleryItem"
                  data-classes="digital" data-heading="Preception" data-description="digital collage"/>
             <img class="template-item" src="images/preview/multimedia/4.jpeg" data-template="galleryItem"
@@ -187,20 +190,27 @@
             <img class="template-item" src="images/preview/multimedia/6.jpeg" data-template="galleryItem"
                  data-classes="digital painting" data-heading="female 2"
                  data-description="digital collage"/>
-            <img class="template-item" src="images/preview/multimedia/7.jpg" data-template="galleryItem"
-                 data-classes="digital painting" data-heading="image of man" data-description="video installation for Kunsthalle Munich"/>
+
             <img class="template-item" src="images/preview/multimedia/8.jpg" data-template="galleryItem"
                  data-classes="painting" data-heading="image of man"
                  data-description="video installation for Kunsthalle Munich"/>
             <img class="template-item" src="images/preview/multimedia/9.jpg" data-template="galleryItem"
                  data-classes="digital" data-heading="image of man"
                  data-description="video installation for Kunsthalle Munich"/>
+            <img class="template-item" src="images/preview/multimedia/7.jpg" data-template="galleryItem"
+                 data-classes="digital painting" data-heading="image of man" data-description="video installation for Kunsthalle Munich"/>
+
+
             <img class="template-item" src="images/preview/multimedia/10.png" data-template="galleryItem"
                  data-classes="interactive digital" data-heading="senseparation" data-description="
                      A collaborative project discovering transpositional sensorial experiences, specificly the cross-border networking of people between virtual and real space"/>
             <img class="template-item" src="images/preview/multimedia/11.png" data-template="galleryItem"
                  data-classes="interactive digital" data-heading="senseparation" data-description="
                      A collaborative project discovering transpositional sensorial experiences, specificly the cross-border networking of people between virtual and real space"/>
+
+
+
+
             <img class="template-item" src="images/preview/multimedia/12.jpeg" data-template="galleryItem"
                  data-classes="painting" data-heading="Ocean" data-description="Acryl on Canvas"/>
             <img class="template-item" src="images/preview/multimedia/13.jpeg" data-template="galleryItem"
@@ -261,19 +271,7 @@
             <img class="template-item" data-template="galleryItem" src="images/preview/photography/10.jpg"
                  data-classes="north-america nature bw" data-heading="Willmore Wilderness Park"
                  data-description="Canada"/>
-            <img class="template-item" data-template="galleryItem" src="images/preview/photography/12.jpg"
-                 data-classes="north-america nature" data-heading="Willmore Wilderness Park"
-                 data-description="Canada"/>
-            <img class="template-item" data-template="galleryItem" src="images/preview/photography/13.jpg"
-                 data-classes="north-america nature bw" data-heading="banff national park"
-                 data-description="Canada"/>
             <img class="template-item" data-template="galleryItem" src="images/preview/photography/14.jpg"
-                 data-classes="north-america nature bw" data-heading="banff national park"
-                 data-description="Canada"/>
-            <img class="template-item" data-template="galleryItem" src="images/preview/photography/15.jpg"
-                 data-classes="north-america nature bw" data-heading="banff national park"
-                 data-description="Canada"/>
-            <img class="template-item" data-template="galleryItem" src="images/preview/photography/16.jpg"
                  data-classes="north-america nature bw" data-heading="banff national park"
                  data-description="Canada"/>
             <img class="template-item" data-template="galleryItem" src="images/preview/photography/17.jpg"
@@ -309,8 +307,6 @@
                  data-description="Nicaragua"/>
             <img class="template-item" data-template="galleryItem" src="images/preview/photography/33.jpg"
                  data-classes="central-america" data-heading="Madagalpa" data-description="Nicaragua"/>
-            <img class="template-item" data-template="galleryItem" src="images/preview/photography/36.jpg"
-                 data-classes="central-america humans" data-heading="Leon" data-description="Nicaragua"/>
             <img class="template-item" data-template="galleryItem" src="images/preview/photography/37.jpg"
                  data-classes="central-america humans" data-heading="Granada" data-description="Nicaragua"/>
             <img class="template-item" data-template="galleryItem" src="images/preview/photography/38.jpg"
@@ -321,18 +317,8 @@
                  data-classes="central-america" data-heading="Granada" data-description="Nicaragua"/>
             <img class="template-item" data-template="galleryItem" src="images/preview/photography/41.jpg"
                  data-classes="central-america" data-heading="Granada" data-description="Nicaragua"/>
-            <img class="template-item" data-template="galleryItem" src="images/preview/photography/42.jpg"
-                 data-classes="central-america" data-heading="Bus Station" data-description="Nicaragua"/>
-            <img class="template-item" data-template="galleryItem" src="images/preview/photography/43.jpg"
-                 data-classes="central-america" data-heading="Antigua" data-description="Nicaragua"/>
-            <img class="template-item" data-template="galleryItem" src="images/preview/photography/44.jpg"
-                 data-classes="nature" data-heading="Alps" data-description="Germany"/>
             <img class="template-item" data-template="galleryItem" src="images/preview/photography/48.jpg"
                  data-classes="central-america" data-heading="Leon" data-description="Nicaragua"/>
-            <img class="template-item" data-template="galleryItem" src="images/preview/photography/50.jpg"
-                 data-classes="asia humans" data-heading="Chantaburi" data-description="Tahiland"/>
-            <img class="template-item" data-template="galleryItem" src="images/preview/photography/51.jpg"
-                 data-classes="asia nature" data-heading="Sulawesi" data-description="Indonesia"/>
             <img class="template-item" data-template="galleryItem" src="images/preview/photography/52.jpg"
                  data-classes="asia humans bw" data-heading="Mountain village" data-description="Laos"/>
             <img class="template-item" data-template="galleryItem" src="images/preview/photography/53.jpg"
@@ -359,33 +345,17 @@
                  data-classes="asia" data-heading="Luang Prabang" data-description="Laos"/>
             <img class="template-item" data-template="galleryItem" src="images/preview/photography/65.jpg"
                  data-classes="asia humans" data-heading="on a Boat" data-description="Indonesia"/>
-            <img class="template-item" data-template="galleryItem" src="images/preview/photography/66.jpg"
-                 data-classes="asia humans" data-heading="Togian Islands" data-description="Indonesia"/>
             <img class="template-item" data-template="galleryItem" src="images/preview/photography/67.jpg"
                  data-classes="asia humans" data-heading="animal transport" data-description="Indonesia"/>
-            <img class="template-item" data-template="galleryItem" src="images/preview/photography/82.jpg"
-                 data-classes="asia humans" data-heading="buffalo market" data-description="Indonesia"/>
-            <img class="template-item" data-template="galleryItem" src="images/preview/photography/68.jpg"
-                 data-classes="asia humans" data-heading="traditional funeral" data-description="Indonesia"/>
             <img class="template-item" data-template="galleryItem" src="images/preview/photography/70.jpg"
                  data-classes="asia humans" data-heading="Mountain village" data-description="Laos"/>
-            <img class="template-item" data-template="galleryItem" src="images/preview/photography/71.jpg"
-                 data-classes="central-america nature" data-heading="Crater lake" data-description="Costa Rica"/>
             <img class="template-item" data-template="galleryItem" src="images/preview/photography/72.jpg"
                  data-classes="asia humans" data-heading="Mountain village" data-description="Laos"/>
-            <img class="template-item" data-template="galleryItem" src="images/preview/photography/73.jpg"
-                 data-classes="asia humans" data-heading="Chiang Mai" data-description="Thailand"/>
-            <img class="template-item" data-template="galleryItem" src="images/preview/photography/74.jpg"
-                 data-classes="central america nature bw" data-heading="Playa Las Penitas"
-                 data-description="Nicaragua"/>
             <img class="template-item" data-template="galleryItem" src="images/preview/photography/75.jpg"
                  data-classes="asia humans" data-heading="at traditional funeral" data-description="Indonesia"/>
             <img class="template-item" data-template="galleryItem" src="images/preview/photography/79.jpg"
                  data-classes="asia humans" data-heading="buffalo market" data-description="Indonesia"/>
-            <img class="template-item" data-template="galleryItem" src="images/preview/photography/80.jpg"
-                 data-classes="asia" data-heading="Siem Riep" data-description="Cambodia"/>
-            <img class="template-item" data-template="galleryItem" src="images/preview/photography/84.jpg"
-                 data-classes="asia humans" data-heading="at traditional funeral" data-description="Indonesia"/>
+
         </div><!-- /.row -->
     </div><!-- /.container -->
 </section>
@@ -469,7 +439,7 @@
                 <!--  job 3 -->
                 <h4>
                     <span class="exp-badge badge">2013 - 2014 </span>
-                    <a href="www.br-online.de/jugend/izi/">
+                    <a href="http://www.br-online.de/jugend/izi/">
                         International Central Institute for Youth and Educational Television</a>
                     <br>
 
@@ -487,7 +457,7 @@
                 <!-- job 4 -->
                 <h4>
                     <span class="exp-badge badge">2013</span>
-                    <a href="www.experteer.de">EXPERTEER GmbH</a>
+                    <a href="http://www.experteer.de">EXPERTEER GmbH</a>
                     <br>
 
                     <span class="job-title spaced text-light">Working student as graphic designer with focus on web and UI</span>
