add navbar-brand image and fixed nabar height

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -53,8 +53,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand scroll-top" href="#">Singer</a><span
-                    class="navbar-tagline hidden-sm">Natascha</span>
+                <a class="navbar-brand scroll-top img-responsive" href="#"><img src="images/navbar/me.png"></a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -89,7 +88,7 @@
 
             <!-- Information -->
             <div class="col-sm-12 col-md-9 col-lg-9 mt40-xs mt40-sm">
-                <h3 class="mb20">Hello World - I’m Natascha!</h3>
+                <h4 class="mb20">Hello World - I’m Natascha!</h4>
                 <p class="mb20">
                     Since I was a small child I loved painting and math. Over the time this changed
                     into a fascination for the fast pacing technology which is drastically
