--- a/HTML/index.html
+++ b/HTML/index.html
@@ -53,7 +53,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand scroll-top img-responsive" href="#"><img src="images/navbar/me.png"></a>
+                <a class="navbar-brand scroll-top img-responsive" href="#"><img src="images/navbar/me.jpg"></a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
